--- a/base.css
+++ b/base.css
@@ -253,3 +253,13 @@ input.colorfull-ui.number::after {
     color: black;
     position: absolute;
 }
+
+/*select*/
+select.colorfull-ui {
+    width: 200px;
+    height: 30px;
+    background: white;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    font-size: 15px;
+}
