--- a/base.css
+++ b/base.css
@@ -477,3 +477,62 @@ button.media.media-square-play > i.icon {
     font-size: 17px;
     color: white;
 }
+
+/*btn*/
+.btn {
+    line-height: 25px;
+    border: 0px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 0px;
+}
+
+.btn > span.icon {
+    margin-right: 3px;
+    margin-left: 3px;
+}
+
+.btn-primary {
+    color: white;
+    background: #5A6BD4;
+}
+
+.btn-default {
+    border: 1px solid #DDD;
+    background: white;
+}
+
+.btn-default:hover{
+    background: #F8F8F8;
+}
+
+.btn-info {
+    color: white;
+    background: #73EEF5;
+}
+/*btn-group*/
+.btn-group > .btn{
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
+.btn-group > .btn {
+    border-radius: 0px;
+    float: left;
+}
+
+.btn-group > .btn:first-child {
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-right: 0px;
+}
+
+.btn-group > .btn:last-child {
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-left: 1px solid #ddd;
+}
+
+.btn-group:after {
+    content: ' ';
+    clear: both;
+}
