--- a/base.css
+++ b/base.css
@@ -423,7 +423,25 @@ input[type='submit'].info.colorfull-ui {
 }
 
 /*select*/
-select.colorfull-ui {
+.form-control.select {
+    position: relative;
+}
+
+.form-control.select > .icon.chevron-down {
+    position: absolute;
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    border: 0px;
+    margin: 0px;
+    text-align: center;
+    font-size: 14px;
+    line-height: 14px;
+    top: 10.5px;
+    right: 5px;
+}
+
+.form-control.select > select {
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -435,10 +453,11 @@ select.colorfull-ui {
     border-radius: 5px;
     position: relative;
     padding-left: 7px;
+    padding-right: 14px;
 }
 
 
-select.big.colorfull-ui {
+.form-control.select > select.big.colorfull-ui {
     width: 200px;
     height: 35px;
 }
