--- a/base.css
+++ b/base.css
@@ -856,7 +856,7 @@ button.media.media-square-play > i.icon {
     margin-left: 0px;
     margin-right: 0px;
     border-radius: 0px;
-    float: left;
+    /*float: left;*/
     position: relative;
 }
 
